ci experimentation